# hyundai_v2x_public

./: CMakeLists.txt  README.md  package.xml
msg/hyundai_v2x_msgs/: CMakeLists.txt  package.xml
msg/hyundai_v2x_msgs/msg/: debugIndicator.msg  spatData.msg  stateData.msg  trafficLightIndicator.msg
src/: pvd_example.json  tcp_client_si.py
