<package>
  <name>hyundai_v2x_msgs</name>
  <version>1.0.1</version>
  <description>
    hyundai_v2x_msgs definition
  </description>
  <maintainer email="robotics@kaist.ac.kr">SeungilHan</maintainer>
  <author>SeungilHan</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
    <architecture_independent/>
  </export>
</package>
